# qt-material-stubs

./: README.md  pyproject.toml
qt_material-stubs/: __init__.pyi  hook-qt_material.pyi
qt_material-stubs/resources/: __init__.pyi  generate.pyi
