[tool.poetry]
name = "qt_material-stubs"
version = "0.1.0"
description = "Stubs for qt-material."
packages = [{ include = "qt_material-stubs" }]
authors = ["忘忧北萱草 <wybxc@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
